Ledger: ingestion D4 removes 40.5% of load allocation (commit queued behind the 100M leg)
Claude-Session: https://claude.ai/code/session_01AcZTGGbUsm2JbRhrZTeC4a